--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block css %}
+    <!-- Custom CSS -->
+    <link href="{% static '/css/login_styles.css' %}" rel="stylesheet">
+{% endblock css %}
+
 {% block content %}
 
     <!-- Main Content -->
@@ -16,15 +21,16 @@
                                     <div class="text-center mb-4">
                                         <i class="fas fa-user-plus fa-3x text-primary"></i>
                                     </div>
-                                    {#                                    <div class="text-center mb-5">#}
-                                    {#                                        <i class="fas fa-exchange-alt fa-3x text-primary mt-3"></i>#}
-                                    {#                                        <h2 class="fw-bold">Вход в личный кабинет</h2>#}
-                                    {#                                    </div>#}
+                                    <div class="text-center mb-5">
+                                        {#                                        <i class="fas fa-exchange-alt fa-3x text-primary mt-3"></i>#}
+                                        <h2 class="fw-bold">Вход в личный кабинет</h2>
+                                    </div>
 
                                     <!-- Social Login Buttons -->
                                     <div class="row g-3 mb-4">
                                         <div class="col-6">
-                                            <a href="#" class="btn btn-outline-secondary w-100 social-btn">
+                                            <a href="{% url 'users:social:begin' 'vk-oauth2' %}"
+                                               class="btn btn-outline-secondary w-100 social-btn">
                                                 <i class="fab fa-vk text-primary me-2"></i> ВКонтакте
                                             </a>
                                         </div>
@@ -43,7 +49,7 @@
                                     </div>
 
                                     <!-- Login Form -->
-                                    <form method="post" class="needs-validation">
+                                    <form method="post">
                                         {% csrf_token %}
 
                                         <div class="mb-3">
@@ -53,16 +59,51 @@
                                                 <i class="fas fa-envelope text-muted"></i>
                                             </span>
                                                 {{ form.username }}
-
-                                                <div class="invalid-feedback">
-                                                    Пожалуйста, введите корректный email
-                                                </div>
-                                                {% if form.username.errors %}
-                                                    <div class="alert alert-danger alert-dismissible fade show">
-                                                        {{ form.username.errors }}
-                                                    </div>
-                                                {% endif %}
                                             </div>
+                                        </div>
+
+                                        {% if form.errors %}
+                                            <script>
+                                                document.addEventListener("DOMContentLoaded", function () {
+                                                    var myModal = new bootstrap.Modal(document.getElementById("errorModal"));
+                                                    myModal.show();
+                                                });
+                                            </script>
+                                        {% endif %}
+
+                                        <!-- Modal -->
+                                        {% if messages %}
+                                            {% for message in messages %}
+
+                                                <!-- Modal -->
+                                                <div class="modal fade" id="errorModal" tabindex="-1"
+                                                     aria-labelledby="errorModalLabel" aria-hidden="true">
+                                                    <div class="modal-dialog">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <h5 class="modal-title" id="exampleModalLabel">Ошибка
+                                                                    данных.</h5>
+
+                                                                <button type="button" class="btn-close"
+                                                                        data-bs-dismiss="modal"
+                                                                        aria-label="Close"></button>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                {{ message }}
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                                <button type="button" class="btn btn-primary"
+                                                                        data-bs-dismiss="modal">Закрыть
+                                                                </button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            {% endfor %}
+                                        {% endif %}
+
+                                        <div class="invalid-feedback">
+                                            Пожалуйста, введите корректный email
                                         </div>
 
                                         <div class="mb-3">
